--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "fast": "next dev --turbo",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --schema=./prisma/schema.prisma && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
